webpack build and es6

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script src="index.js
-    "></script>
-    <title>Document</title>
+    <script src="bundle.js"></script>
+    <title>Ticker</title>
 </head>
 
 <body>
@@ -16,11 +15,11 @@
         <div class="box">
             <span class="time">1</span>Days</div>
         <div class="box">
-            <span class="time">24</span>Hours</div>
+            <span class="time">23</span>Hours</div>
         <div class="box">
-            <span class="time">59</span>Minutes</div>
+            <span class="time">27</span>Minutes</div>
         <div class="box">
-            <span class="time">57</span>Seconds</div>
+            <span class="time">47</span>Seconds</div>
     </div>
 </body>
 
